2011-06-14  Yael Aharon  <yael.aharon@nokia.com>

Reviewed by Kent Tamura.

        <progress> should support :indeterminate pseudo-class
        https://bugs.webkit.org/show_bug.cgi?id=62430

        * fast/dom/HTMLProgressElement/indeterminate-progress-001.html: Added.
        * fast/dom/HTMLProgressElement/indeterminate-progress-002-expected.txt: Added.
        * fast/dom/HTMLProgressElement/indeterminate-progress-002.html: Added.
        * platform/mac/fast/dom/HTMLProgressElement/indeterminate-progress-001-expected.png: Added.
        * platform/mac/fast/dom/HTMLProgressElement/indeterminate-progress-001-expected.txt: Added.
        * platform/chromium/test_expectations.txt:
2011-06-14  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Kent Tamura.

        <progress> should support :indeterminate pseudo-class
        https://bugs.webkit.org/show_bug.cgi?id=62430

        Add support for :indeterminate pseudo class for progress element.

        Tests: fast/dom/HTMLProgressElement/indeterminate-progress-001.html
               fast/dom/HTMLProgressElement/indeterminate-progress-002.html

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::canShareStyleWithControl):
        (WebCore::CSSStyleSelector::canShareStyleWithElement):
        (WebCore::CSSStyleSelector::SelectorChecker::checkOneSelector):
        * html/HTMLProgressElement.cpp:
        (WebCore::HTMLProgressElement::isDeterminate):
        (WebCore::HTMLProgressElement::didElementStateChange):
        * html/HTMLProgressElement.h:

Canonical link: https://commits.webkit.org/78182@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88793 268f45cc-cd09-0410-ab3c-d52691b4dbfc